updates to search, image, advanced, and empty css file

--- a/imagesearch.html
+++ b/imagesearch.html
@@ -4,7 +4,11 @@
         <title>Image Search</title>
     </head>
     <body>
-        <form action="https://www.google.com/search" method="get">
+        <div>
+            <a href="index.html">Back</a>
+        </div>
+        
+        <form action="https://www.google.com/search">
             <input type="text" name="q">
             <input type="hidden" name="tbm" value="isch">
             <input type="submit" value="Image search">
