--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
         <title>Search</title>
     </head>
     <body>
+        <div id="container">
+            <li id ="flex-item"><a href="imagesearch.html">Image Search</a></li>
+            <li id="flex-item"><a href="advancedsearch.html">Advanced Search</a></li>
+
+        </div>
+        <div>
         <form action="https://www.google.com/search">
             <input type="text" name="q">
             <input type="submit" value="Google Search">
         </form>
+        </div>
     </body>
 </html>
